--- a/package.json
+++ b/package.json
@@ -4,10 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --transpile-only src/server.ts",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.12",
+    "@babel/node": "^7.16.8",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-decorators": "^7.16.7",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-plugin-transform-typescript-metadata": "^0.3.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "express": "^4.17.2",
@@ -17,6 +28,7 @@
     "nodemailer-express-handlebars": "^4.0.0",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.3.0",
     "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
   },
@@ -26,6 +38,7 @@
     "@types/jsonwebtoken": "^8.5.7",
     "@types/nodemailer": "^6.4.4",
     "@types/nodemailer-express-handlebars": "^4.0.2",
+    "@types/swagger-ui-express": "^4.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   }
